cmss/e-forms/objects/Threshold_Product_Parameter__c/fields/Dependent_Product_Parameter__c.field-meta.xml
<CustomField>
    <fullName>Dependent_Product_Parameter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dependent Product Parameter</label>
    <referenceTo>Product_Parameter__c</referenceTo>
    <relationshipLabel>Threshold Product Parameters (Dependent Product Parameter)</relationshipLabel>
    <relationshipName>DependentProdParam</relationshipName>
    <type>Lookup</type>
</CustomField>