cmss/e-forms/objects/Threshold_Product_Parameter__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>ThresholdProductParameterAssociations</relationshipName>
    <type>Lookup</type>
</CustomField>