cmss/e-forms/objects/Threshold_Product_Parameter__c/fields/Product_Parameter__c.field-meta.xml
<CustomField>
    <fullName>Product_Parameter__c</fullName>
    <label>Product Parameter</label>
    <referenceTo>Product_Parameter__c</referenceTo>
    <relationshipName>ProductParams</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>